	- the environment (NIL for global, T for local, VENV, or ENV5)
	moved here from symbol.d because it uses symbol_env_search()
	* subr.d (SPECIAL-VARIABLE-P): changed the signagure
	* constobj.d (version): bumped because SPECIAL-VARIABLE-P is in FUNTAB
	* symbol.d (SPECIAL-VARIABLE-P): moved to eval.d
	* compiler.lisp (subr-info) [CROSS]: updated the signature

2002-09-23  Sam Steingold  <sds@gnu.org>

	some code clean-up
	* describe.lisp (unicode-attributes): avoid a warning in LOOP
	* charstrg.d (eqcomp_fun_t): renamed from `eqcomp_fun'
	* array.d (ADJUSTABLE-ARRAY-P): use VALUES_IF
	(uint_bitpack_t): renamed from `uint_bitpack'
	(uint_2bitpack_t): renamed from `uint_2bitpack'
	(initial_contents_locals_t): renamed from `initial_contents_locals'
	(reshape_data): renamed from `reshape_data'
	(test_array): turned into a function
	(ADJUST-ARRAY): use it
	* symbol.d (test_symbol): new function
	(%PUTD, %FIND-SUBR, GET, %PUTPLIST, %PUT, REMPROP, SYMBOL-PACKAGE)
	(SYMBOL-PLIST, SYMBOL-NAME, SPECIAL-VARIABLE-P): use it

2002-09-22  Arseny Slobodjuck <ampy@ich.dvo.ru>

	Bring (directory) to compliance with new win32 shortcut handling.
	* pathname.d [WIN32_NATIVE]:
	(resolve_shell_shortcut): changed parameters and symantics to
	lower level (symlink is based on shortcuts which is
	an implementation method).
	(resolve_shell_symlink): use it, work as old
	resolve_shell_shortcut did.
	(assure_dir_exists): renamed a call to it.
	(directory_search_scandir): now handles shortcuts specially.

2002-09-21  John Hinsdale <hin@alma.com>

	* module/oracle/Makefile.in: better Oracle -I path for v8.0.5

2002-09-20  Sam Steingold  <sds@gnu.org>

	* control.d (UNWIND-TO-DRIVER): accept a TOP-P argument
	(UNWIND-TO-TOP): removed
	* subr.d, constsym.d (UNWIND-TO-TOP): removed
	* subr.d, compiler.lisp (UNWIND-TO-DRIVER): changed the signature
	* eval.d (FUNTAB): added MEMQ
	* constobj.d (version): bumped because of UNWIND-TO-DRIVER and MEMQ