@@ -14,6 +14,9 @@
 	* constobj.d (version): bumped because SPECIAL-VARIABLE-P is in FUNTAB
 	* symbol.d (SPECIAL-VARIABLE-P): moved to eval.d
 	* compiler.lisp (subr-info) [CROSS]: updated the signature
+	* error.d (fehler_environment): new function
+	* lispbibl.d (fehler_environment): prototype it
+	* control.d (test_optional_env_arg): use it
 
 2002-09-23  Sam Steingold  <sds@gnu.org>
 
